--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="header.css" />
   <link rel="stylesheet" href="footer.css" />
   <link rel="stylesheet" href="fonts.css" />
+  <link rel="stylesheet" href="arrow.css" />
   <link rel="icon" type="image/x-icon" href="img/favicon.png">
 </head>
 <body onload="loadPokemon()">
